tests/invalid/Template_Invalid_14.whiley
function f<T>({T data} rec) -> (int r):
    return rec.data
